<resources>
    <string name="app_name">QuizApp</string>
    <string name="about_Button">About</string>
    <string name="help_Button">Help</string>
    <string name="pass_Results">Pass Results</string>
    <string name="start_Quiz">Start Quiz</string>
    <string name="help_Text">Help:</string>
    <string name="help_Content">"When the  test begins you will be provided with a series of images. On the top-left, and top-right two categories names will be present. As quickly as you can, you will swipe these images into left or right side of the screen, towards the category you associate the image with. \n \nYou can view your previous results by pressing the \"Past Results\" button on the home page. "</string>
    <string name="help_BackButton">Back</string>
    <string name="progress_Action">Working</string>
</resources>
